[gd_scene load_steps=4 format=3 uid="uid://3darbcdj8rf"]

[ext_resource type="Script" uid="uid://ds0gj64jrh0nw" path="res://gameplay/gui/game_over/game_over.gd" id="1_ypi5f"]
[ext_resource type="FontFile" uid="uid://cjqm33jfi3sjh" path="res://fonts/Ubuntu-B.ttf" id="2_54slk"]
[ext_resource type="PackedScene" uid="uid://empygty13skr" path="res://gui/button/button.tscn" id="3_tj21e"]

[node name="game_over" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ypi5f")

[node name="center_container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="Panel" parent="center_container"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="center_container/panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="title" type="Label" parent="center_container/panel/margin_container/vbox_container"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_54slk")
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="restart_game_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource("3_tj21e")]
layout_mode = 2
size_flags_vertical = 3
text = "Resume game (space)"

[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/restart_game_button" to="." method="_on_restart_game_button_pressed"]
